# bias-beacon

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_model.sh  zip_extension.py
bb_plugin/: background.js  bias-info.html  bias-info.js  content-script.js  manifest.json  popup.html  popup.js  prompt  style.css
model/: __init__.py  custom_bias_detection.py  dummy_model.py  gpt_bias_detection.py  llm_bias_detection.py
model/outlet_classification/: DATASCI 266 Final Report.docx
model/outlet_classification/Headline Evaluation/: Determining Pegasus Parameters.ipynb
model/outlet_classification/News Outlet Classification/: Full Classification.ipynb
notebooks/: GPT3 classification.ipynb  MBIB_Modeling.ipynb  balance_df_gpt_eval.csv  balanced_df_gpt.csv  eda.ipynb
notebooks/MBIB-main/: Data Analysis.ipynb
notebooks/outlet_classification/: README.md  W266 Final Project Proposal.docx
notebooks/outlet_classification/Headline Evaluation/: Determining T5 Parameters.ipynb  Evaluation Headlines Pegasus.ipynb  Evaluation Headlines T5.ipynb  Visuals Headline Evaluation.ipynb
notebooks/outlet_classification/News Outlet Classification/: Subset Classification.ipynb
resources/: yaniv-notes.txt
server/: launch.py  server.py
storage/: cache.json  cache.py  cache_manager.py  storage_manager.py
